# PrepVault

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  auth.py  config.py  db.py  main.py  models.py  schemas.py
app/migrations/: env.py
app/migrations/versions/: 0c2318d5b440_baseline_schema.py  58c9b0c82977_add_jobs_table.py  a1b2c3d4e5f6_encrypt_existing_credentials.py  b7e1f2a3c4d5_add_account_multi_account.py  c8d9e0f1a2b3_rebrand_local_user_email.py  d1e2f3a4b5c6_add_problem_notes.py
app/providers/: __init__.py  base.py  codechef.py  hackerrank.py  hellointerview.py  languages.py  leetcode.py
app/routers/: __init__.py  auth.py  jobs.py  problems.py  revision.py  submissions.py  sync.py  transfer.py
app/security/: __init__.py  vault.py
app/services/: activity.py  insights.py  jobs.py  presentation.py  resilience.py  revision.py  stats.py  submissions.py  sync.py  transfer.py
app/services/llm/: __init__.py  gateway.py  types.py
app/static/: app.js  index.html  styles.css
app/workers/: __init__.py  dispatch.py  queue.py  tasks.py
